# ordis-rag

./: .gitignore  README.md  prompts.yaml  pyproject.toml
ordis_rag/: __main__.py  llm.py  ordis.py  prompts.py  state.py  vector_store.py
ordis_rag/model/: crawler_links.py  grade.py  resources.py
ordis_rag/resource/stats/: base_stats.py  stats.py  warframe.py
ordis_rag/scripts/: simple_search.py  simple_vector_store.py
ordis_rag/wiki/: wiki_loader.py  wiki_parser.py
